# codex-3d-pet

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: verify-vrm-structure.mjs
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AvatarStage.tsx  StatusBadge.test.ts  StatusBadge.tsx
apps/desktop/src/lib/: avatar-controller.ts  pet-shape-hit.ts  preferences.ts  tauri.ts
apps/desktop/src/state/: persona-import.test.ts  persona-import.ts  presentation.test.ts  presentation.ts
apps/desktop/src/types/: pet.ts
apps/mcp-server/: package.json  tsconfig.json
apps/mcp-server/src/: bridge.test.ts  bridge.ts  index.ts
docs/: codex-setup.md  install.md  privacy.md
scripts/: collect-installer.sh  e2e-packaged-import.sh  run-dev.sh
