[package]
name = "codex-3d-pet"
version = "0.1.0"
description = "A local-first VRM desktop pet for Codex"
authors = ["Codex 3D Pet contributors"]
edition = "2021"

[lib]
name = "codex_3d_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "codex-3d-pet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
axum = "0.8.6"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-positioner = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-window-state = "2.4.1"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread"] }
